# niftyregw

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  coverage.xml  mise.toml  pyproject.toml  pytest.ini  zensical.toml
.github/workflows/: code_quality.yml  docs.yml  publish.yml  test.yml
docs/: cli.md  index.md  installation.md  python-api.md
src/niftyregw/: __init__.py  __main__.py  enums.py  install.py  wrapper.py
src/niftyregw/commands/: __init__.py  aladin.py  average.py  f3d.py  install.py  jacobian.py  measure.py  resample.py  tools.py  transform.py
tests/: __init__.py  conftest.py  test_commands_aladin.py  test_commands_average.py  test_commands_f3d.py  test_commands_init.py  test_commands_install.py  test_commands_other.py  test_enums.py  test_init.py  test_install.py  test_main.py  test_wrapper.py
