[project]
name = "niftyregw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Fernando Pérez-García", email = "fepegar@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "requests>=2.32.5",
    "typer>=0.24.0",
]

[project.scripts]
niftyregw = "niftyregw.__main__:app"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "ruff>=0.15.1",
]
